--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,6 @@ publish:
     - poetry build
   script:
     poetry publish
-  only:
-    - dev  # restrict to dev branch
+  # only:
+    # - dev  # restrict to dev branch
 
