--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,17 +27,6 @@ stages:
 #       - test-reports/
 #   timeout: 20m
 
-versioning:
-  stage: versioning
-  script:
-    - latest_tag=$(git describe --tags --abbrev=0)
-    - commit_count=$(git rev-list ${latest_tag}..HEAD --count)
-    - base_version=${latest_tag#v}
-    - new_version="${base_version}.${commit_count}"
-    - echo "New version $new_version"
-    # update version in pyproject.toml without committing or tagging
-    - sed -i -E "s/^(version\s*=\s*\")0\.0\.0(\".*)$/\1${new_version}\2/" pyproject.toml
-
 publish:
   stage: publish
   image: python:3.12
@@ -46,6 +35,14 @@ publish:
     - poetry config pypi-token.pypi "$PYPI_TOKEN"
     - poetry build
   script:
+    - latest_tag=$(git describe --tags --abbrev=0)
+    - commit_count=$(git rev-list ${latest_tag}..HEAD --count)
+    - base_version=${latest_tag#v}
+    - new_version="${base_version}.${commit_count}"
+    - echo "New version $new_version"
+    # update version in pyproject.toml without committing or tagging
+    - sed -i -E "s/^(version\s*=\s*\")0\.0\.0(\".*)$/\1${new_version}\2/" pyproject.toml
+    # And publish
     - poetry publish
   # only:
     # - dev  # restrict to dev branch
