Complex test of keydb first then mqtt starting and if all keydb messages has been processed stop test

--- a/tests/static_files/test_config_mqtt_with_keydb_fallback.yaml
+++ b/tests/static_files/test_config_mqtt_with_keydb_fallback.yaml
@@ -1,3 +1,12 @@
+EQUIPMENT_INSTANCES:
+  - equipment:
+      adapter: HelloWorld
+      data:
+        instance_id: example_hello_world_id1
+        institute: example_hello_world_institute1
+      requirements:
+        interval: 1
+
 OUTPUTS:
   - plugin: MQTT
     broker: localhost
