--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,6 @@ packages = [
     { include = "leaf" }         # your actual Python module
 ]
 
-[tool.poetry-dynamic-versioning]
-enable = true
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -49,8 +47,8 @@ mypy = "^1.14.1"
 bump2version = "^1.0.1"
 
 [build-system]
-requires = ["poetry-core", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 log_cli = true
