--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,19 +19,20 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = "^3.12"
-paho-mqtt = "~2.1.0"
-redis = "~5.0.0b2"
-aioredis = "~1.3.1"
-influxobject = "~0.0.4"
-pyyaml = "~6.0.2"
-watchdog = "~2.1.6"
+aioredis = "~2.0.1"
 dateparser = "~1.2.2"
-requests = "~2.32.4"
-leaf-register = "~0.1.1"
 httpx = "~0.28.1"
-nicegui = "^2.17.0"
+influxobject = "~0.0.4"
 leaf-hello-world = ">=0.1.0"
+leaf-register = "~0.1.1"
+nicegui = "^2.22.1"
+paho-mqtt = "~2.1.0"
+pyyaml = "~6.0.2"
+python = "^3.12"
+redis = "~6.2.0"
+requests = "~2.32.4"
+watchdog = "~6.0.0"
+
 
 [tool.poetry.scripts]
 leaf = "leaf.start:main"
