--- a/tests/static_files/test_config_keydb.yaml
+++ b/tests/static_files/test_config_keydb.yaml
@@ -2,7 +2,7 @@ EQUIPMENT_INSTANCES:
   - equipment:
       adapter: HelloWorld
       data:
-        instance_id: example_hello_world_id1
+        instance_id: keydb_test_instance
         institute: example_hello_world_institute1
       requirements:
         interval: 1
@@ -11,4 +11,4 @@ OUTPUTS:
   - plugin: KEYDB
     host: localhost
     port: 6379
-    db: 0
+    db: 3
