--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,13 +20,21 @@ test:
     - poetry show  # Check installed dependencies
   script:
     - poetry show pytest-xdist  # Verify pytest-xdist is installed
-    - poetry run pytest -n auto --forked tests/ --junitxml=test-reports/report.xml
+    - poetry run coverage run -m pytest -n auto --forked tests/ --junitxml=test-reports/report.xml
+    - poetry run coverage report --show-missing
+    - poetry run coverage html
+    - poetry run coverage xml
   artifacts:
     when: always
     reports:
       junit: test-reports/*.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
     paths:
       - test-reports/
+      - htmlcov/
+      - coverage.xml
   timeout: 30m
 
 publish:
