does find tests?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,12 +17,7 @@ test:
     - poetry lock
     - poetry install
   script:
-    - poetry run pytest -n auto tests/ \
-      --cov=. \
-      --cov-report=term-missing \
-      --cov-report=xml:coverage.xml \
-      --cov-report=html:htmlcov \
-      --junitxml=test-reports/report.xml
+    - poetry run pytest -n auto tests/ --cov=. --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov --junitxml=test-reports/report.xml
 
   artifacts:
     when: always
