--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,18 +16,22 @@ test:
     - source /venv/bin/activate
     - poetry lock
     - poetry install
-    - poetry env info  # Debug Poetry environment
-    - poetry show  # Check installed dependencies
   script:
-    - poetry show pytest-xdist  # Verify pytest-xdist is installed
-    - poetry run pytest -n auto --forked tests/ --junitxml=test-reports/report.xml
+    - poetry run pytest -n auto tests/ --cov=. --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov --junitxml=test-reports/report.xml
+
   artifacts:
     when: always
     reports:
       junit: test-reports/*.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
     paths:
       - test-reports/
+      - htmlcov/
+      - coverage.xml
   timeout: 30m
+
 
 publish:
   stage: publish
