--- a/leaf/config/configuration.yaml
+++ b/leaf/config/configuration.yaml
@@ -2,12 +2,23 @@ EQUIPMENT_INSTANCES:
   - equipment:
       adapter: HelloWorld
       data:
-        instance_id: frodo_1_reactor
-        institute: WageningenUniversity
+        instance_id: demo_device
+        institute: university_lab
       requirements:
-        interval: 1
+        interval: 10
 
 OUTPUTS:
   - plugin: MQTT
     broker: localhost
     port: 1883
+    fallback: KEYDB
+
+  - plugin: KEYDB
+    host: localhost
+    port: 6379
+    db: 0
+    fallback: FILE
+
+  - plugin: FILE
+    filename: local.json
+    fallback: null
