--- a/tests/static_files/test_config_mqtt_with_keydb_fallback.yaml
+++ b/tests/static_files/test_config_mqtt_with_keydb_fallback.yaml
@@ -2,8 +2,8 @@ EQUIPMENT_INSTANCES:
   - equipment:
       adapter: HelloWorld
       data:
-        instance_id: example_hello_world_id1
-        institute: example_hello_world_institute1
+        instance_id: keydb_test_instance
+        institute: keydb_test_instance_institute1
       requirements:
         interval: 1
 
@@ -15,4 +15,4 @@ OUTPUTS:
   - plugin: KEYDB
     host: localhost
     port: 6379
-    db: 0
+    db: 3
