--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,12 @@ stages:
 
 variables:
   GIT_DEPTH: 0  # Full history
+  # Parallel test isolation settings
+  PYTEST_ADDOPTS: "--forked --dist=worksteal --tb=short"
+  # Prevent Redis conflicts in parallel execution
+  REDIS_URL: "redis://localhost:6379"
+  # Use temporary directories for test isolation
+  TMPDIR: "/tmp"
 
 # Job to run tests
 test:
@@ -15,9 +21,12 @@ test:
     - redis-server --daemonize yes
     - source /venv/bin/activate
     - poetry lock
-    - poetry install
+    - poetry install --with test,dev
   script:
-    - poetry run pytest -n auto tests/ --cov=. --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov --junitxml=test-reports/report.xml
+    # Run ALL tests with forked process isolation
+    - poetry run pytest -n auto tests/
+      --cov=. --cov-report=term-missing --cov-report=xml:coverage.xml
+      --cov-report=html:htmlcov --junitxml=test-reports/report.xml
 
   artifacts:
     when: always
@@ -30,7 +39,7 @@ test:
       - test-reports/
       - htmlcov/
       - coverage.xml
-  timeout: 30m
+  timeout: 20m  # Sufficient time for all tests with forked isolation
 
 
 publish:
