--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,15 @@ log_cli = true
 log_cli_level = "DEBUG"
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+# Test configuration for CI (GitLab)
+# Use --forked for test isolation to prevent conflicts
+addopts = [
+    "--forked",  # Fork each test for isolation
+    "--tb=short",  # Shorter tracebacks
+]
+markers = [
+    "timing: marks tests as timing-sensitive (file watchers, etc.)",
+]
 
 [tool.coverage.run]
 source = ["leaf"]
